// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

12/24/2009
	r73 [Jobbie]
	* When mounted with warg and used warg strike in WoE maps it will fail.
	* Fixed a typo in GN_CARTCANNON.

12/23/2009
	r72 [Jobbie]
	* Fixed burning causing map-error. Sorry I messed up the code. (followed up r70)	

	r71 [Jobbie]
	* Quick cleanuped. Did not notice there is a remain of code from scratch. (followed up r70)

	r70 [Jobbie]
	* Added the rest of Rangers skills. Does not include Camouflage, Sensitivekeen and Fearbreeze.
	* Removed Electric Shocker from Researchtrap list to increase range. Should not affect boss monster.
	* Fixed Epiclesis not giving properly the MaxHP bonus.

	r69 [pakpil]
	* Fixed Burning status:
	- Map-server crash when someone dies with Burning.
	- Burning didn't show its sc icon propertly.

12/21/2009
	r66 [Jobbie]
	* Fixed an issue in battle_attr_fix causing map-server to crash.

	r64 [pakpil]
	* Initialized Shadow Chaser's skills implementation. Started with SC_TRIANGLESHOT.

12/19/2009
	r61 [Jobbie]
	* Implemented renewal cast time settings to enable fixed and variable cast time.
	* Renovatio's cast time is not affected by dex.
	* Sacrament( fixed cast time reduced ) and Freezing( fixed cast time increased ) are now functional.
	* Fixed the AfterCastDelay? which is not showing the paw icon and did not trigger after cast delay of skill.

	r60 [Jobbie]
	* Added RA_WUGDASH and RA_RESEARCHTRAP skill.
	* Fixed electric shocker and cluster bomb their unit must not affected by arrow shower.
	* Fixed usable skills while riding a warg.

12/13/2009
	r54 [Jobbie]
	* Quick fixed while merging with latest eA update something messed up.
	
	r53 [Jobbie]
	* Merge eAthena Updates upto r14198

11/29/2009
	r40 [Jobbie]
	* Added Ranger Trap only related skills.
	- Changes:
		* Icebound and Firing Trap deals neutral damage to enemy based on official info.