@@ -398,6 +398,7 @@ struct map_session_data {
 	const char* debug_file;
 	int debug_line;
 	const char* debug_func;
+	int shadowform_id;
 };
 
 
